<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.hxd.root.vmodel.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAppBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:background="@drawable/shape_login_info_background"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/account"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="16sp"
                    android:typeface="serif"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorSeparatorLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="16sp"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_or_account"
                    android:inputType="number"
                    android:maxLength="11"
                    android:text="@={login.account}"
                    android:textColor="@color/colorDarkGray"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="15sp"
                    android:typeface="serif"
                    tools:ignore="Autofill,NestedWeights" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/colorSeparatorLine" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:text="@={login.password}"
                    android:textColor="@color/colorDarkGray"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="15sp"
                    android:typeface="serif"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_common_height"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_main_button"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:typeface="serif" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/tv_find_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:onClick="goRecover"
                android:text="@string/recover"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:onClick="goRegister"
                android:text="@string/quick_registration"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:typeface="serif"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.hxd.root.view.LongPressView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:typeface="sans" />
        </LinearLayout>

    </LinearLayout>

</layout>
